--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -10,7 +10,7 @@ pt-BR:
         delete_confirmation: Tem certeza? Esta ação não pode ser desfeita.
         name: Nome
         color: Cor
-      new_edit:
+      form:
         new_title: Nova Categoria
         edit_title: 'Editar Categoria "%{category}"'
         name_label: Nome
@@ -31,6 +31,25 @@ pt-BR:
       confirmation_instructions: Não recebeu email de confirmação?
     landing:
       title: Página Inicial
+    transactions:
+      index:
+        title: Transações
+        new: Nova Transação
+        edit: Editar
+        delete: Remover
+        delete_confirmation: Tem certeza? Esta ação não pode ser desfeita.
+        category: Categoria
+        transaction_date: Data
+        name: Nome
+      form:
+        new_title: Nova Transação
+        edit_title: 'Editar Transacão "%{transaction}"'
+        amount_label: Valor
+        category_label: Categoria
+        date_label: Data
+        name_label: Nome
+        submit: Salvar
+        back: Voltar
     users:
       confirmations:
         new:
