--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -77,7 +77,10 @@ pt-BR:
         new_title: Nova Transação
         edit_title: 'Editar Transacão "%{transaction}"'
         amount_label: Valor
+        amount_type_label: Tipo
         category_label: Categoria
+        credit_label: Crédito
+        debit_label: Débito
         date_label: Data
         name_label: Nome
         submit: Salvar
